# Pattern-Copy

./: CMakeLists.txt  README.txt
src/: Common_Def.cpp  Common_Def.h  main.cpp  methods.cpp  methods.h
